# agentmemory

./: .gitignore  LICENSE  README.ar.md  README.de.md  README.ja.md  README.ko.md  README.md  pyproject.toml
agentmemory/: __init__.py
agentmemory/core/: __init__.py  memory_entry.py  memory_manager.py  memory_types.py
agentmemory/retrievers/: __init__.py  base.py  semantic.py
agentmemory/stores/: __init__.py  base.py  vector.py
agentmemory/utils/: __init__.py  embeddings.py
examples/: agent_integration.py  basic_usage.py
papers/: agentmemory_journal.tex  agentmemory_journal_article.md  submission_venues.md
tests/: test_memory_manager.py
